RESOLVED FIXED240086
[macOS] ScreenCaptureKitCaptureSource should stop content sharing session when capture ends
https://bugs.webkit.org/show_bug.cgi?id=240086
Summary [macOS] ScreenCaptureKitCaptureSource should stop content sharing session whe...
Eric Carlson
Reported 2022-05-04 15:22:41 PDT
ScreenCaptureKitCaptureSource should stop the content sharing session when capture ends
Attachments
Patch (2.07 KB, patch)
2022-05-04 15:37 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2022-05-04 15:22:52 PDT
Eric Carlson
Comment 2 2022-05-04 15:37:24 PDT
EWS
Comment 3 2022-05-04 18:02:25 PDT
Committed r293809 (250282@main): <https://commits.webkit.org/250282@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458831 [details].
Note You need to log in before you can comment on or make changes to this bug.