[macOS] ScreenCaptureKitCaptureSource should stop content sharing session when capture ends https://bugs.webkit.org/show_bug.cgi?id=240086 rdar://91008087

Reviewed by Jer Noble.

Tested manually.

* platform/mediastream/mac/ScreenCaptureKitCaptureSource.mm:
(WebCore::ScreenCaptureKitCaptureSource::~ScreenCaptureKitCaptureSource): Call
-[SCContentSharingSession end].
(WebCore::ScreenCaptureKitCaptureSource::sessionDidEnd): Ditto.

Canonical link: https://commits.webkit.org/250282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293809 268f45cc-cd09-0410-ab3c-d52691b4dbfc